# my-cmake-examples

./: .clang-format  LICENSE  README.md
simple-hello-world/: CMakeLists.txt  CMakePresets.json
simple-hello-world/cmake/: CommonProperties.cmake  RemoteDeps.cmake
simple-hello-world/src/: main.c
